--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,11 @@
 *.userosscache
 *.sln.docstates
 
+java.txt
+java_tokenised.txt
+java_tokenised_big.txt
+java1.txt
+
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
